--- a/1.pyton 基础.md
+++ b/1.pyton 基础.md
@@ -1,18 +1,22 @@
 ![](https://gitee.com/sunnywanggitee/img-url/raw/master/img/20230723222254.png)
 
+
 ## 如何安装三方包？
 
-安装包的时候建议使用阿里云的镜像服务：
+安装包的时候建议使用阿里云的镜像服务，否则可能会经常安装失败：
 
 ```python
- pip install -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host=mirrors.aliyun.com/pypi/simple/ Django
+pip install -i http://mirrors.aliyun.com/pypi/simple/ --trusted-host=mirrors.aliyun.com/pypi/simple/ Django
 ```
+
 ## 如何升级 pip?
 
 MAC:
+
 ```python
 python -m pip install --upgrade pip
 ```
+
 ## 如何切换 python 版本？
 建议不要手动安装不同版本的 python，直接用 `brew install python3`进行安装即可。它可以帮你搞定环境的问题。
 
